--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p>Published 07 Jul 2025</p>
         </header>
         <div class="text-content">
-          <h1>HTML & CSS foundations</h1>
+          <h1 tabindex="0">HTML & CSS foundations</h1>
           <p>
             These languages are the backbone of every website,
             defining structure, content, and presentation.
